Table row background-images fill the corresponding cells https://bugs.webkit.org/show_bug.cgi?id=287503

Reviewed by NOBODY (OOPS!).

A table row background-image "covers exactly the full area of
all cells that originate in the row, even if they span outside
the row, but this difference in area does not affect background
image positioning." (CSS 2.1) Ensure that row (or column or
section) background-images expand to fill the cell area when
appropriate by explicitly enlarging the painted area. Also
apply the correct rounded corners: they must restrict the *cell*
dimensions, not the row (or column or section) dimensions.

Unlike prior code, this always paints the cell rectangle, but
supplies a separate rectangle for image sizing purposes. This
subsumes the `backgroundImageStrip` functionality used
for inline backgrounds.

* LayoutTests/fast/table/row-background-image-span.html: Added.
* Source/WebCore/rendering/BackgroundPainter.cpp:
(WebCore::BackgroundPainter::paintFillLayers const):
(WebCore::BackgroundPainter::paintFillLayer const):
Remove `backgroundImageStrip` parameter in favor of `m_imageRect`.
(WebCore::BackgroundPainter::calculateBackgroundImageGeometry):
Size according to `imageRect` when provided. Expand results to
`destinationRect` for repeated backgrounds.
* Source/WebCore/rendering/BackgroundPainter.h:
(WebCore::BackgroundPainter::setImageRect): New function.
(WebCore::BackgroundPainter::setOverrideOrigin): Deleted.
* Source/WebCore/rendering/InlineBoxPainter.cpp:
(WebCore::InlineBoxPainter::paintFillLayer): Use `setImageRect`.
* Source/WebCore/rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::paintBackgroundsBehindCell):
Use `setImageRect` to compute image dimensions, but always paint
`fillRect` (the cell rectangle).