Source/WebCore/rendering/RenderTableCell.cpp
@@ -28,6 +28,7 @@
 
 #include "BackgroundPainter.h"
 #include "BorderPainter.h"
+#include "BorderShape.h"
 #include "CollapsedBorderValue.h"
 #include "ElementInlines.h"
 #include "FillLayer.h"
@@ -1378,50 +1379,41 @@ void RenderTableCell::paintBackgroundsBehindCell(PaintInfo& paintInfo, LayoutPoi
     if (!tableElt->collapseBorders() && style().emptyCells() == EmptyCell::Hide && !firstChild())
         return;
 
-    const auto& style = backgroundObject->style();
-    auto& bgLayer = style.backgroundLayers();
+    const auto& bgStyle = backgroundObject->style();
+    auto& bgLayer = bgStyle.backgroundLayers();
 
-    auto color = style.visitedDependentColor(CSSPropertyBackgroundColor);
+    auto color = bgStyle.visitedDependentColor(CSSPropertyBackgroundColor);
     if (!bgLayer.hasImage() && !color.isVisible())
         return;
 
-    color = style.colorByApplyingColorFilter(color);
+    color = bgStyle.colorByApplyingColorFilter(color);
 
-    LayoutPoint adjustedPaintOffset = paintOffset;
+    LayoutRect fillRect { paintOffset, size() };
     if (backgroundObject != this)
-        adjustedPaintOffset.moveBy(location());
+        fillRect.moveBy(location());
 
-    // Background images attached to the row or row group must span the row
-    // or row group. Draw them at the backgroundObject's dimensions, but
-    // clipped to this cell.
-    // FIXME: This should also apply to columns and column groups.
-    bool paintBackgroundObject = backgroundObject != this && bgLayer.hasImage() && !is<RenderTableCol>(backgroundObject);
-    // We have to clip here because the background would paint
-    // on top of the borders otherwise. This only matters for cells and rows.
-    bool shouldClip = paintBackgroundObject || (backgroundObject->hasLayer() && (backgroundObject == this || backgroundObject == parent()) && tableElt->collapseBorders());
-    GraphicsContextStateSaver stateSaver(paintInfo.context(), shouldClip);
-    if (paintBackgroundObject)
-        paintInfo.context().clip({ adjustedPaintOffset, size() });
-    else if (shouldClip) {
-        LayoutRect clipRect(adjustedPaintOffset.x() + borderLeft(), adjustedPaintOffset.y() + borderTop(),
-            width() - borderLeft() - borderRight(), height() - borderTop() - borderBottom());
-        paintInfo.context().clip(clipRect);
-    }
-    LayoutRect fillRect;
-    if (paintBackgroundObject) {
-        if (auto* tableSectionRenderer = dynamicDowncast<RenderTableSection>(backgroundObject))
-            fillRect = backgroundRectForSection(*tableSectionRenderer, *tableElt);
-        else
-            fillRect = backgroundRectForRow(*backgroundObject, *tableElt);
-        fillRect.moveBy(backgroundPaintOffset);
-    } else
-        fillRect = LayoutRect { adjustedPaintOffset, size() };
-    auto compositeOp = document().compositeOperatorForBackgroundColor(color, *this);
     BackgroundPainter painter { *this, paintInfo };
     if (backgroundObject != this) {
         painter.setOverrideClip(FillBox::BorderBox);
-        painter.setOverrideOrigin(FillBox::BorderBox);
+        // Background images attached to the row or row group must span the
+        // row or row group. Draw them as sized for that element, but clipped
+        // to this cell.
+        // FIXME: This should also apply to columns and column groups.
+        if (bgLayer.hasImage() && !is<RenderTableCol>(backgroundObject)) {
+            LayoutRect imageRect;
+            if (auto* tableSectionRenderer = dynamicDowncast<RenderTableSection>(backgroundObject))
+                imageRect = backgroundRectForSection(*tableSectionRenderer, *tableElt);
+            else
+                imageRect = backgroundRectForRow(*backgroundObject, *tableElt);
+            imageRect.moveBy(backgroundPaintOffset);
+            painter.setImageRect(imageRect);
+        }
     }
+    if (backgroundObject->hasLayer() && (backgroundObject == this || backgroundObject == parent()) && tableElt->collapseBorders()) {
+        // Shrink the drawn area to account for collapsed borders (cell and row only)
+        fillRect.contract(borderWidths());
+    }
+    auto compositeOp = document().compositeOperatorForBackgroundColor(color, *this);
     painter.paintFillLayers(color, bgLayer, fillRect, BleedAvoidance::None, compositeOp, backgroundObject);
 }
 
